--- a/web-pages/hobbies.html
+++ b/web-pages/hobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Dalde Personal Website - About </title>
+    <title> Dalde Personal Website - hobbies </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header id="about-header">
+    <header id="skills-header">
         <div class="container"> 
             <div class="logo-container">
                 <img src="../assets/images/logo3.png" alt="logo">
@@ -33,19 +33,43 @@
             </div>      
         </div>
     </header>
-
-    <section id="about" class="about-section">
+    
+    <section id="hobbies" class="hobbies-section">
         <div class="container">
-            <h2>About Me</h2>
-            <div class="about-me">
-                <p>I think you already know my name right? , so here's more information about me. You can call me "Rics" or "Rica", I'm 18 years old, I was born under the zodiac sign of Gemini, and it is in every 8th day of June. I'm towering the height of 5'2". I'm the eldest daughter of Ana Marie S. Dalde and Endrique B. Dalde. I have 2 little sisters named Marie Angelique and Erich Marie. I live in Crossing, Libona, Bukidnon. I finished my high school in Libona National High School, with flying colors.</p>
-                <p>Back when I was a kid, I love watching cartoons, I used to play outside, and that time I only think about my wounded knees. Unlike now, I experienced a lot of challenges but still I overcome it and I used those challenges as my strength.</p>
-                <p>In my journey I never dreamed to pursue the BSIT course because they said that it's too difficult and thus, I see myself in a corporate world of business. Because business is really my first choice. But day by day I really tried to love my course because I have no choice. HAHAHA kidding aside.</p>
-                <p>As I get older I realized that life is like a roller coaster. But just enjoy the ride and never give up, because we have lots of dreams to fulfill in life.</p>
-            </div>          
+            <h2> My Hobbies </h2>
+                <div class="row">
+                    <div class="col">
+                        <span><i class='bx bxs-microphone'></i></span>
+                        <p>I love dancing and singing.</p>
+                    </div>
+                    <div class="col">
+                        <span><i class='bx bxs-cool' ></i></span>
+                        <p>I tried to play a guitar, but I've found out that it was not my thing.</p>
+                    </div>
+                    <div class="col">
+                        <span><i class='bx bxs-music'></i></span>
+                        <p>I still enjoy listening to music but prefer to be a spectator rather than a creator.</p>
+                    </div>
+                </div>
+                <div class="row-2">
+                    <div class="col">
+                        <span><i class='bx bx-color'></i></span>
+                        <p>I love bicycling.</p>
+                    </div>
+                    <div class="col">
+                        <span><i class='bx bx-crown' ></i></span>
+                        <p>I participated in some beauty pageants because they believed in my capabilities.</p>
+                    </div>
+                    <div class="col">
+                        <span><i class='bx bxs-shopping-bags'></i></span>
+                        <p>I have a little skills in entrepreneurship, which drives me to earn money at the peaked of 
+                            the pandemic because I sell different stuffs online.
+                        </p>
+                    </div>
+                </div>
         </div>
     </section>
-
+    
     <footer>
         <div class="container">
             <section class="footer-1">
@@ -69,7 +93,7 @@
                 <div class="col contact-info">
                     <h3>Come Say Hello!</h3> <br>
                     <p> Crossing, Libona, Bukidnon</p>
-                    <p> 0926 439 2126 </p>
+                    <p> <a href="tel:+7733484581">(773) 348-4581 </a> </p>
                     <div class="social-media-icon">
                         <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
                         <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
