--- a/web-pages/contacts.html
+++ b/web-pages/contacts.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Dalde Personal Website  </title>
+    <title> Dalde Personal Website - contacts </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
     <!--External CSS File -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
     <!-- Favicons -->
-    <link href="assets/images/favicon.png" rel="icon">
+    <link href="../assets/images/favicon.png" rel="icon">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -20,29 +20,41 @@
     <header id="home-header">
         <div class="container"> 
             <div class="logo-container">
-                <img src="assets/images/logo3.png" alt="logo">
+                <img src="../assets/images/logo3.png" alt="logo">
              </div>
              <div class="nav-container">
                 <nav class="header-container">
-                    <a href="index.html">Home</a>
-                    <a href="web-pages/about.html">About</a>
-                    <a href="web-pages/gallery.html">Gallery</a>
-                    <a href="web-pages/hobbies.html">Hobbies</a>
-                    <a href="web-pages/contacts.html">Contacts</a>
-
+                    <a href="../index.html">Home</a>
+                    <a href="../web-pages/about.html">About</a>
+                    <a href="../web-pages/gallery.html">Gallery</a>
+                    <a href="../web-pages/hobbies.html">Hobbies</a>
+                    <a href="../web-pages/contacts.html">Contacts</a>
                 </nav>
             </div>      
         </div>
     </header>
 
-    <section class="banner-section">
+    <section id="contacts">
         <div class="container">
-            <div class="banner">
-                <h1></h1>
+            <div class="form-container">
+                <form action="">
+                    <h2> Contact Me </h2>
+                    <label for="firstname">First Name</label>
+                        <input type="text" name="firstname" id="">
+                    <label for="lastname">Last Name</label>
+                        <input type="text" name="lastname" id="">
+                    <label for="email">Email</label>
+                        <input type="text" name="email" id="">
+                    <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                        <div class="submit-container">
+                            <input type="button" value="SUBMIT">
+                        </div>
+                </form>
             </div>
         </div>
     </section>
-    
+
     <footer>
         <div class="container">
             <section class="footer-1">
@@ -58,9 +70,9 @@
                 <div class="col">
                     <h3>Partners</h3> <br>
                     <ul>
-                        <li> <img src="assets/images/partners/p1.png" alt="Partner 1 Logo"> </li>
-                        <li> <img src="assets/images/partners/p2.png" alt="Partner 2 Logo"> </li>
-                        <li> <img src="assets/images/partners/p3.png" alt="Partner 3 Logo"> </li>
+                        <li> <img src="../assets/images/partners/p1.png" alt="Partner 1 Logo"> </li>
+                        <li> <img src="../assets/images/partners/p2.png" alt="Partner 2 Logo"> </li>
+                        <li> <img src="../assets/images/partners/p3.png" alt="Partner 3 Logo"> </li>
                     </ul>
                 </div>
                 <div class="col contact-info">
