--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
 
 </head>
 <body>
-    <header id="home-header">
+    <header id="skills-header">
         <div class="container"> 
             <div class="logo-container">
-                <img src="assets/images/logo3.png" alt="logo">
+                <img src="../assets/images/logo3.png" alt="logo">
              </div>
              <div class="nav-container">
                 <nav class="header-container">
-                    <a href="index.html">Home</a>
-                    <a href="web-pages/about.html">About</a>
-                    <a href="web-pages/gallery.html">Gallery</a>
-                    <a href="web-pages/hobbies.html">Hobbies</a>
-                    <a href="web-pages/contacts.html">Contacts</a>
-
+                    <a href="../index.html">Home</a>
+                    <a href="../web-pages/about.html">About</a>
+                    <a href="../web-pages/gallery.html">Gallery</a>
+                    <a href="../web-pages/hobbies.html">Hobbies</a>
+                    <a href="../web-pages/contacts.html">Contacts</a>
                 </nav>
             </div>      
         </div>
@@ -69,6 +68,5 @@
             </section>
         </div>
     </footer>
-
 </body>
 </html>
