--- a/web-pages/gallery.html
+++ b/web-pages/gallery.html
@@ -23,32 +23,20 @@
 <body>
    
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../web-pages/about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../web-pages/gallery.html">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../web-pages/hobbies.html">Hobbies</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../web-pages/contacts.html">Contacts</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <div class="container"> 
+        <div class="logo-container">
+            <img src="../assets/images/logo3.png" alt="logo">
+         </div>
+         <div class="nav-container">
+            <nav class="header-container">
+                <a href="../index.html">Home</a>
+                <a href="../web-pages/about.html">About</a>
+                <a href="../web-pages/gallery.html">Gallery</a>
+                <a href="../web-pages/hobbies.html">Hobbies</a>
+                <a href="../web-pages/contacts.html">Contacts</a>
+            </nav>
+        </div>      
+    </div>
     </header>
       
       <main>
