--- a/web-pages/gallery.html
+++ b/web-pages/gallery.html
@@ -49,7 +49,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-                <img src="../assets/images/about-carousel/slide1.jpg" alt="carousel Image 1">
+                <img src="../assets/images/about-carousel/slide9.jpg" alt="carousel Image 1" width="1600" height="">
               <div class="container">
                 <div class="carousel-caption text-start">
                   <h1>Example headline.</h1>
@@ -60,7 +60,7 @@
             </div>
             <div class="carousel-item">
               <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-                <img src="../assets/images/about-carousel/slide2.jpg" alt="carousel Image 3">
+                <img src="../assets/images/about-carousel/slide7.jpg" alt="carousel Image 3" width="1600" width="">
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Another example headline.</h1>
@@ -71,7 +71,7 @@
             </div>
             <div class="carousel-item">
               <!--<svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg> -->
-                <img src="../assets/images/about-carousel/slide4.jpg" alt="carousel Image 3">
+                <img src="../assets/images/about-carousel/slide8.jpg" alt="carousel Image 3" width="1600">
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>One more for good measure.</h1>
