--- a/web-pages/hobbies.html
+++ b/web-pages/hobbies.html
@@ -67,27 +67,30 @@
           </div>
           <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
-              <h2 class="display-5">Another headline</h2>
+              <h2 class="display-5">Singing</h2>
               <p class="lead">And an even wittier subheading.</p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <!--<div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
+            <img src="../assets/images/product/Singing.jpg" alt="singing" width="" height="500">
           </div>
         </div>
       
         <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
           <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
-              <h2 class="display-5">Another headline</h2>
+              <h2 class="display-5">Bicycling</h2>
               <p class="lead">And an even wittier subheading.</p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <!--<div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
+            <img src="../assets/images/product/bicycling.jpeg" alt="bicycling" width="500">
           </div>
           <div class="text-bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 py-3">
-              <h2 class="display-5">Another headline</h2>
-              <p class="lead">And an even wittier subheading.</p>
+              <h2 class="display-5">Listening to Music</h2>
+              <p class="lead">I still enjoy listening to music but prefer to be a spectator rather than a creator.</p>
             </div>
-            <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+            <!--<div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
+            <img src="../assets/images/product/music.jpg" alt="Music" width="450">
           </div>
         </div>
       
