--- a/web-pages/about.html
+++ b/web-pages/about.html
@@ -64,9 +64,9 @@
                     <p> Crossing, Libona, Bukidnon</p>
                     <p> 0926 439 2126 </p>
                     <div class="social-media-icon">
-                        <a href="#" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
-                        <a href="#" target="_blank"> <i class='bx bxl-twitter'></i> </a>
-                        <a href="#" target="_blank"> <i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.facebook.com/ricamarie.dalde" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
+                        <a href="https://twitter.com/Ricamariedalde?t=1YD8bb3iZKh02YizXhxXXA&s=09" target="_blank"> <i class='bx bxl-twitter'></i> </a>
+                        <a href="https://www.instagram.com/invites/contact/?i=jih6stxq5q4o&utm_content=3lcd0le" target="_blank"> <i class='bx bxl-instagram'></i></a>
                     </div>
                 </div>
             </section>
