--- a/web-pages/hobbies.html
+++ b/web-pages/hobbies.html
@@ -59,7 +59,7 @@
         <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
           <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 py-3">
-              <h2 class="display-5">I love dancing or sometimes tiktoking</h2>
+              <h2 class="display-5">I love dancing and sometimes tiktoking</h2>
               <p class="lead">And an even wittier subheading.</p>
             </div>
             <!-- <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
@@ -79,7 +79,7 @@
           <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <div class="my-3 p-3">
               <h2 class="display-5">Bicycling</h2>
-              <p class="lead">And an even wittier subheading.</p>
+              <p class="lead">A bicycle ride around the world begins with a single pedal stroke.</p>
             </div>
             <!--<div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
             <img src="../assets/images/product/bicycling.jpeg" alt="bicycling" width="500">
