--- a/web-pages/about.html
+++ b/web-pages/about.html
@@ -38,10 +38,12 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="about-me">
-                <p>I think you already know my name right? , so here's more information about me. You can call me "Rics" or "Rica", I'm 18 years old, I was born under the zodiac sign of Gemini, and it is in every 8th day of June. I'm towering the height of 5'2". I'm the eldest daughter of Ana Marie S. Dalde and Endrique B. Dalde. I have 2 little sisters named Marie Angelique and Erich Marie. I live in Crossing, Libona, Bukidnon. I finished my high school in Libona National High School, with flying colors.</p>
-                <p>Back when I was a kid, I love watching cartoons, I used to play outside, and that time I only think about my wounded knees. Unlike now, I experienced a lot of challenges but still I overcome it and I used those challenges as my strength.</p>
-                <p>In my journey I never dreamed to pursue the BSIT course because they said that it's too difficult and thus, I see myself in a corporate world of business. Because business is really my first choice. But day by day I really tried to love my course because I have no choice. HAHAHA kidding aside.</p>
-                <p>As I get older I realized that life is like a roller coaster. But just enjoy the ride and never give up, because we have lots of dreams to fulfill in life.</p>
+                <p>Hello!! I think you already know my name right? , so here's more information about me. Well, you can call me "Rics" or "Rica", I'm 18 years old, I was born under the zodiac sign of Gemini, and it is in every 8th day of June. I'm towering the height of 5'2". I am a BSIT student at University of Science and Technology of Southern Philippines(USTP). I'm the eldest daughter of Ana Marie S. Dalde and Endrique B. Dalde. I have two siblings named Marie Angelique and Erich Marie. I live in Crossing, Libona, Bukidnon. I finished my high school in Libona National High School, with flying colors.</p>
+                <p>Back when I was a kid, where tension free and care free from all sorts of duties and responsibilities. I love watching cartoons, and outdoor games in all kinds of weather especially in getting wet in the rain. Unlike now, I experienced a lot of challenges but still I overcome it and I used those challenges as my strength.</p>
+                <p>At present, I never thought taking up the BSIT course because they said that it's too difficult and thus, I see myself in a corporate world of business. Because business is really my first choice. But day by day I really tried to love my course because I have no choice. HAHAHA kidding aside.</p>
+                <p>As I get a little older I realize that life is like a roller coaster. But just enjoy the ride and never give up, because we have lots of dreams to fulfill in life.</p>
+                <p>If you want to know  my personality, bond with me so you will know me.</p>
+                <p>Once again, I'm Rica Marie S. Dalde, God's greatest masterpiece.</p>
             </div>          
         </div>
     </section>
