--- a/web-pages/gallery.html
+++ b/web-pages/gallery.html
@@ -102,21 +102,22 @@
           <!-- Three columns of text below the carousel -->
           <div class="row">
             <div class="col-lg-4">
-              <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-              <h2 class="fw-normal">Heading</h2>
-              <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>         
+              <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
+                <img src="../assets/images/about-carousel/heading1.jpg" width="225">
+              <h2 class="fw-normal">Elementary</h2>
+              <p>I graduated salutatorian at Camp 14 Elementary School.</p>         
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
               <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
                 <img src="../assets/images/about-carousel/heading2.jpg" width="300" height="">
               <h2 class="fw-normal">Highschool</h2>
-              <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+              <p>It is one of the most bizarre periods in my life. It taught me more life lessons, and too many stories and adventures to tell.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
               <!--<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
                 <img src="../assets/images/about-carousel/heading3.jpg" width="200" height="">
               <h2 class="fw-normal">College</h2>
-              <p>Coming soon...</p>
+              <p>Studying in process... Needs more time, effort, perseverance, patience, wisdom, and more and more studies.</p>
             </div><!-- /.col-lg-4 -->
           </div><!-- /.row -->
       
