--- a/web-pages/gallery.html
+++ b/web-pages/gallery.html
@@ -189,7 +189,8 @@
                     <div class="social-media-icon">
                         <a href="https://www.facebook.com/ricamarie.dalde" target="_blank"> <i class='bx bxl-facebook-circle'></i> </a>
                         <a href="https://twitter.com/Ricamariedalde?t=1YD8bb3iZKh02YizXhxXXA&s=09" target="_blank"> <i class='bx bxl-twitter'></i> </a>
-                        <a href="https://www.instagram.com/invites/contact/?i=jih6stxq5q4o&utm_content=3lcd0le" target="_blank"> <i class='bx bxl-instagram'></i></a>
+                        <a href="https://www.instagram.com/invites/contact/?i=jih6stxq5q4o&utm_content=3lcd0le" target="_blank"> <i class='bx bxl-instagram'></i> </a>
+                        <a href="https://www.tiktok.com/@ricamariedalde?_t=8ZacIDXfXij&_r=1" target="_blank"> <i class='bx bxl-tiktok'></i></a>
                     </div>
                 </div>
             </section>
